# dactyl

./: .gitignore  .travis.yml  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yaml
benches/: fn_btoi.rs  fn_btou.rs  fn_htou.rs  fn_nice_clock.rs  fn_nice_elapsed.rs  fn_nice_float.rs  fn_nice_percent.rs  fn_nice_replace.rs  fn_nice_u16.rs  fn_nice_u32.rs  fn_nice_u64.rs  fn_nice_u8.rs  fn_nohash.rs  fn_saturating_from_u8.rs
dactyl/: Cargo.toml
dactyl/benches/: fn_nice_elapsed.rs  fn_nice_u32.rs  fn_nice_u64.rs  fn_nice_u8.rs
dactyl/src/: lib.rs
dactyl/src/nice_elapsed/: mod.rs
dactyl/src/nice_int/: mod.rs  nice_percent.rs  nice_u16.rs  nice_u32.rs
src/: gt_zero.rs  hash.rs  lib.rs  macros.rs
src/nice/: chr.rs  digiter.rs  mod.rs  nice_clock.rs  nice_elapsed.rs  nice_float.rs  nice_percent.rs  nice_u16.rs  nice_u32.rs  nice_u64.rs  nice_u8.rs
src/nice_elapsed/: clock.rs  mod.rs
src/nice_int/: mod.rs  nice_float.rs  nice_percent.rs  nice_u16.rs  nice_u32.rs  nice_u64.rs  nice_u8.rs
src/traits/: btoi.rs  btou.rs  gt_zero.rs  hex.rs  htou.rs  inflect.rs  intdiv.rs  mod.rs  saturating_from.rs
