[package]
name = "dactyl"
version = "0.2.3"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "A small library to quickly stringify integers with basic formatting."
license = "WTFPL"
repository = "https://github.com/Blobfolio/dactyl"
readme = "README.md"
keywords = [ "integer", "printing", "formatting" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"about.toml",
	"doc",
	"justfile",
	"release",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Dactyl"
bash-dir = "./"
man-dir = "./"
credits-dir = "./"

[dependencies]
num-traits = "0.2.*"

[dev-dependencies]
brunch = "0.2.*"
num-format = "0.4.*"

[[bench]]
name = "fn_nice_elapsed"
harness = false

[[bench]]
name = "fn_nice_percent"
harness = false

[[bench]]
name = "fn_nice_u8"
harness = false

[[bench]]
name = "fn_nice_u16"
harness = false

[[bench]]
name = "fn_nice_u32"
harness = false

[[bench]]
name = "fn_nice_u64"
harness = false

[[bench]]
name = "fn_saturating_from_u8"
harness = false
