[package]
name = "dactyl"
version = "0.1.0"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "A lightweight number-formatting library."
license = "WTFPL"
repository = "https://github.com/Blobfolio/dactyl"
publish = false

[dependencies]
num-integer = "0.1.*"

[dev-dependencies]
num-format = "0.4.*"
rand = "*"

[dev-dependencies.brunch]
git = "https://github.com/Blobfolio/brunch.git"
tag = "v0.1.0"

[[bench]]
name = "fn_nice_elapsed"
harness = false

[[bench]]
name = "fn_nice_percent"
harness = false

[[bench]]
name = "fn_nice_u8"
harness = false

[[bench]]
name = "fn_nice_u16"
harness = false

[[bench]]
name = "fn_nice_u32"
harness = false

[[bench]]
name = "fn_nice_u64"
harness = false
